<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditEntryFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/trigger_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/trigger_hint_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/thoughts_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/thoughts_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/thoughts_hint_text"
        app:layout_constraintTop_toBottomOf="@+id/trigger_text_field"
        app:layout_constraintBottom_toTopOf="@+id/feelings_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/feelings_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/feelings_hint_text"
        app:layout_constraintTop_toBottomOf="@+id/thoughts_text_field"
        app:layout_constraintBottom_toTopOf="@+id/physical_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/physical_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/physical_hint_text"
        app:layout_constraintTop_toBottomOf="@+id/feelings_text_field"
        app:layout_constraintBottom_toTopOf="@+id/behaviour_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/behaviour_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/behaviour_hint_text"
        app:layout_constraintTop_toBottomOf="@id/physical_text_field"
        app:layout_constraintBottom_toTopOf="@id/notes_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/notes_text_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/notes_hint_text"
        app:layout_constraintTop_toBottomOf="@id/behaviour_text_field"
        app:layout_constraintBottom_toTopOf="@id/entry_save_button">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/entry_save_button"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        app:layout_constraintTop_toBottomOf="@id/behaviour_text_field"/>

</androidx.constraintlayout.widget.ConstraintLayout>